# Actix_rust_restfulweb

./: .gitignore  Cargo.toml  DATABASE_SETUP.md  Dockerfile  README.md  README_DATABASE.md  SECURITY_FRAMEWORK.md  docker-compose.yml  env.example  start_dev.ps1  test_api.ps1
migrations/: 001_create_users_table.sql  20251022202150_create_subscriptions_table.sql
src/: config.rs  database.rs  main.rs  middleware.rs  models.rs  security.rs
webserver/: .dockerignore  .env  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  configuration.yaml  docker-build.sh  docker-compose.yml  docker-run.sh  startup.rs
webserver/.do/: app.yaml
webserver/.sqlx/: query-ba8f3935a3eb57a395d9ead5d95fd3fd328badaaa24a7f3752ec848b1c291f45.json
webserver/configuration/: base.yaml  production.yaml
webserver/script/: init_db.sh
webserver/src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs
webserver/src/domain/: email_client  email_client.rs  mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
webserver/src/routes/: greet.rs  health.rs  mod.rs  subscribe.rs  telemetry.rs
webserver/tests/: testUseTokio  testhealth.rs
