[package]
name = "actix_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1.0"
env_logger = "0.10"

# 安全框架依赖
# 身份认证和授权
jsonwebtoken = "9.2"
argon2 = "0.5"

# 加密和安全
ring = "0.17"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Web 安全
actix-cors = "0.6"
cookie = "0.18"

# 输入验证
validator = { version = "0.18", features = ["derive"] }
