[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.6", features = ["runtime-actix-rustls","macros","uuid","migrate","chrono", "postgres","offline"] }

serde = { version = "1.0", features = ["derive"] }  

config = "0.13"
chrono = "0.4.15"
uuid = { version   ="1" , features=["v4"]}
tracing = { version = "0.1" , features = ["log"]}
tracing-subscriber = { version = "0.3" , features = ["registry","env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.5"

one_cell = "1"

secrecy = { version = "0.8" , features=["serde"] }
[lib]
name = "webserver"
path = "src/lib.rs"